# subtitle-tool

./: .gitignore  README.md  pyproject.toml
fixtures/: example-glossary.yml
scripts/: bootstrap.ps1  check_models.ps1  launch_ui.ps1  prepare_models.ps1
src/local_subtitle_stack/: app.py  cli.py  config.py  domain.py  guards.py  integrations.py  pipeline.py  queue.py  service.py  ui.py  utils.py
tests/: test_config.py  test_pipeline.py  test_queue.py  test_service.py  test_ui.py  test_utils.py  test_utils_paths.py
